# Spock-scotty-benchmark

./: README.md  Spock-scotty-benchmark.cabal  bench.sh
src/: Main.hs
